--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+    <string name="notes">Notes</string>
+    <string name="tasks">Tasks</string>
+    <string name="settings">Settings</string>
+    <string name="enable_notifications">Enable notifications</string>
     <string name="app_name">My Application</string>
     <string name="welcome_message">Welcome to my application!</string>
     <string name="notes_tasks">Notes and Tasks</string>
