--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+    <string name="notes">Notas</string>
+    <string name="tasks">Tareas</string>
+    <string name="settings">Ajustes</string>
+    <string name="enable_notifications">Habilitar Notificaciones</string>
+    <string name="select_time">Seleccionar Hora</string>
+    <string name="select_date">Seleccionar Fecha</string>
     <string name="app_name"></string>
     <string name="welcome_message">¡Bienvenido a mi aplicación!</string>
     <string name="notes_tasks">Notas y Tareas</string>
@@ -19,8 +25,6 @@
     <string name="task_title_placeholder">Título de la Tarea</string>
     <string name="task_content_placeholder">Detalles de la Tarea</string>
     <string name="details_placeholder">Detalles...</string>
-    <string name="select_date">Seleccionar Fecha</string>
-    <string name="select_time">Seleccionar Hora</string>
     <string name="notification_enabled">Notificación Activada</string>
     <string name="notification_disabled">Notificación Desactivada</string>
     <string name="task_saved">Tarea Guardada</string>
